Misc (rushed) -   -Bookmarklet   -Credits   -Other Sites By Us

--- a/misc/index.html
+++ b/misc/index.html
@@ -7,7 +7,7 @@
     <title>Anonymous</title>
     <meta name="description" content="Anonymize your online identity with Anonymous, the best school unblocker using an Ultraviolet Backend, for work, school, and home." />
     <meta name="theme-color" content="#6853f">
-    <meta content='img/favicon.png' property='og:image'>
+    <meta content='img/favicon.ico' property='og:image'>
     <link rel="stylesheet" href="index.css">
     <script src="/js/title.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="crossorigin="anonymous"></script>
@@ -34,18 +34,21 @@
     </nav>
     <div class="header-container">
       <h1>
-        Anonymous
+        Miscellaneous
       </h1>
     </div>
-    <div class="searchbox">
-      <form>
-        <input class="search" placeholder="Search the web freely">
-        <button type="submit" class="submit-button"><i class="fas fa-search searchicon"></i></button>
-      </form>
+    <div class="containers" id="ccontainer">
+      <h2>Credits:</h2>
+      <h3>Developer: <a href="https://github.com/oHeckGage" class="clinks">Gage</a><br>Developer: <a href="https://discord.gg/bRJVnDec86" class="clinks">Vortex</a><br>Discord/Helper: <a href="https://discord.gg/Zfbp9YFrmj" class="clinks">Rena</a></h3>
     </div>
-    <script src="/uv/uv.bundle.js"></script>
-    <script src="/uv/uv.config.js"></script>
-    <script src="form.js"></script>
+    <div class="containers" id="bcontainer">
+      <h2>Bookmarklet:</h2>
+      <h3 id="btext">Anonymous bookmarklet instructions<br> and code are <a href="https://pastebin.com/wKBRMzSY" class="clinks">here</a>.</h3>
+    </div>
+    <div class="containers" id="ocontainer">
+      <h2>Other Sites:</h2>
+      <h3><a href="https://triway.live" class="clinks">triway.live</a> by Gage.<br><a href="https://aquaticttrident.cf" class="clinks">Aquaduct</a> by Vortex.<br><a href="https://renagamer101.github.io" class="clinks">Rena Network</a> by Rena.</h3>
+    </div>
     <script id="cid0020000319109200791" data-cfasync="false" async src="//st.chatango.com/js/gz/emb.js" style="width: 200px;height: 300px;">{"handle":"anonprox","arch":"js","styles":{"a":"CC0000","b":100,"c":"FFFFFF","d":"FFFFFF","k":"CC0000","l":"CC0000","m":"CC0000","n":"FFFFFF","p":"10","q":"CC0000","r":100,"pos":"br","cv":1,"cvbg":"CC0000","cvw":75,"cvh":30}}
     </script>
   </body>
