--- a/settings/index.html
+++ b/settings/index.html
@@ -32,6 +32,7 @@
         <a href="/settings" class="nav-option"><i class="settings-icon fa fa-gear fa-2xl fa-fw"></i>Settings</a>
         <a href="/chat" class="nav-option"><i class="chat-icon fa fa-message fa-2xl fa-fw"></i>Chat</a>
         <a href="/movies" class="nav-option"><i class="chat-icon fa-solid fa-clapperboard fa-2xl fa-fw"></i>Movies</a>
+        <a href="/misc" class="nav-option"><i class="movies-icon fa-solid fa-cubes fa-2xl fa-fw"></i>Misc</a>
       </div>
     </nav>
 <div class="header-container">
